<resources>
    <string name="app_name">VK_Cup_2021</string>
    <string name="vk_cup">VK Cup 2021</string>

    <string name="task1">1. Такси</string>
    <string name="task2">2. Новости с карточками</string>
    <string name="task3">3. Видеоредактор</string>
    <string name="task4">4. Крестики-нолики</string>
    <string name="task5">5. Обработка голоса</string>

    <string name="news">Новости</string>
    <string name="hide">Скрыть</string>
    <string name="like">Нравится</string>

    <string name="moreNews">Больше таких записей</string>
    <string name="lessNews">Меньше таких записей</string>
    <string name="title_activity_first">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fromGo">Мое местоположение</string>
    <string name="whereGo">Куда поедем?</string>

    <string name="ready">Готово</string>
    <string name="buy_for">Заказать за %1$d ₽</string>
    <string name="ruble">%1$d ₽</string>

    <string name="google_api">AIzaSyACfwXTc5LgtyBb4_wULCPGNx412tGYNbc</string>

    <string name="taxi1">Проехать быстро</string>
    <string name="taxi2">Увидеть красоты города</string>
    <string name="taxi3">На беспилотнике</string>

    <string name="timeInWay">%1$s в пути</string>
    <string name="timeAwait">%1$s ожидание</string>

</resources>